@@ -1,4 +1,9 @@
-2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
+2006-03-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* src/Dialog_Partition_Copy.cc,
+	  src/Dialog_Partition_Resize_Move.cc: cleanups
+
+2006-03-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/GParted_Core.h,
 	  include/TreeView_Detail.h,
